feat: Add debugging page to About Modal, update debug information structure, and enhance remote management with improved disk usage handling

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -1441,9 +1441,8 @@
       "restoreUpdate": "Restore update",
       "debugTools": "Debug Tools",
       "systemInfo": "System Information",
+      "mode": "Mode",
       "platform": "Platform",
-      "buildType": "Build Type",
-      "debugBuild": "Debug Build",
       "folders": "Folders",
       "logsFolder": "Logs Folder",
       "configFolder": "Config Folder",
