--- a/src/assets/i18n/tr-TR.json
+++ b/src/assets/i18n/tr-TR.json
@@ -1442,9 +1442,8 @@
       "restoreUpdate": "Güncellemeyi geri yükle",
       "debugTools": "Hata Ayıklama Araçları",
       "systemInfo": "Sistem Bilgisi",
+      "mode": "Mod",
       "platform": "Platform",
-      "buildType": "Derleme Türü",
-      "debugBuild": "Hata Ayıklama Derlemesi",
       "folders": "Klasörler",
       "logsFolder": "Günlük Klasörü",
       "configFolder": "Yapılandırma Klasörü",
