feat: Enhance backup and restore functionality with legacy support
- Updated restore manager to handle legacy backups, ensuring they are restored to the "default" profile.
- Refactored AppSettingsManager to utilize rcman's JsonStorage for improved settings management.
- Modified core settings operations to use new methods for loading and saving settings.
- Improved rclone backend management by adding options to copy settings from existing backends during addition.
- Introduced UI elements for selecting existing backend configurations when adding new backends.
- Enhanced restore preview modal to display legacy backup information and adjust restore options accordingly.
- Updated translations for new features and legacy backup notifications.

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -1031,6 +1031,11 @@
       "profiles": {
         "title": "Profiles"
       },
+      "legacy": {
+        "title": "Legacy Backup Detected",
+        "description": "This backup was created before the profile system was introduced. It will be restored to the 'default' profile.",
+        "defaultProfile": "All settings will be added to the default profile automatically"
+      },
       "options": "Restore Options",
       "scope": {
         "all": "Restore Everything",
@@ -1570,6 +1575,7 @@
       "addBackend": "Add Backend",
       "editBackend": "Edit Backend",
       "active": "Active",
+      "local": "Local",
       "host": "Host",
       "port": "Port",
       "name": "Name",
@@ -1595,6 +1601,15 @@
       "switchFirst": "Switch to another backend first",
       "nameExists": "Name exists",
       "hostExists": "This host:port is already in use",
+      "copyOptions": {
+        "title": "Copy from Existing Backend",
+        "description": "Start with settings from an existing backend or create from scratch",
+        "backendConfig": "Copy Backend Settings",
+        "remotesConfig": "Copy Remotes",
+        "fromZero": "Start from Zero",
+        "backendHint": "Copy backend-specific settings (filters, flags, etc.)",
+        "remotesHint": "Copy configured remotes (cloud providers)"
+      },
       "status": {
         "notTested": "Connection not tested",
         "connected": "Connected",
