--- a/src/assets/i18n/tr-TR.json
+++ b/src/assets/i18n/tr-TR.json
@@ -1602,6 +1602,16 @@
       "switchFirst": "Önce başka bir arka uca geçin",
       "nameExists": "Bu isim zaten kullanımda",
       "hostExists": "Bu sunucu:port zaten kullanımda",
+
+      "remoteSecurity": {
+        "title": "Yapılandırma Güvenliği",
+        "description": "Bu uzak rclone örneği için şifreleme parolasını yönetin.",
+        "passwordStored": "Parola Kayıtlı",
+        "noPasswordStored": "Parola Kayıtlı Değil",
+        "status": "Durum",
+        "limitation": "Not: Rclone, API üzerinden uzak yapılandırma parolalarını değiştirmeyi veya doğrulamayı desteklemez. Sadece uzak yapılandırma konfigürasyonunun kilidini açmak için kullanabilirsiniz.",
+        "removePassword": "Kayıtlı Parolayı Kaldır"
+      },
       "copyOptions": {
         "title": "Mevcut Arka Uçtan Kopyala",
         "description": "Mevcut bir arka uçtan ayarlarla başlayın veya sıfırdan oluşturun",
@@ -1626,7 +1636,8 @@
         "fileSelectFailed": "Dosya seçimi başarısız oldu",
         "updated": "Arka uç başarıyla güncellendi",
         "added": "Arka uç başarıyla eklendi",
-        "saveFailed": "Arka uç kaydedilemedi: {{message}}"
+        "saveFailed": "Arka uç kaydedilemedi: {{message}}",
+        "onlyActiveBackend": "Yapılandırma dosyasını değiştirmek için lütfen bu arka uca geçiş yapın."
       },
       "delete": {
         "title": "Arka Uç Sil",
@@ -1784,7 +1795,16 @@
         "resetSuccess": "Varsayılana sıfırlandı: {{field}}",
         "saveSuccess": "Kaydedildi: {{field}}",
         "saveError": "{{field}} kaydedilemedi: {{error}}",
-        "loadError": "RClone yapılandırması yüklenemedi"
+        "loadError": "RClone yapılandırması yüklenemedi",
+        "resetAllSuccess": "Tüm RClone arka uç seçenekleri varsayılanlara sıfırlandı",
+        "resetAllError": "RClone arka uç seçenekleri sıfırlanamadı"
+      },
+      "reset": {
+        "button": "Tümünü Varsayılana Sıfırla",
+        "aria": "Tüm RClone arka uç seçeneklerini varsayılan değerlere sıfırla",
+        "title": "Arka Uç Seçeneklerini Sıfırla",
+        "message": "Bu işlem tüm RClone arka uç seçeneklerini varsayılan değerlerine sıfırlayacak ve rclone motorunu yeniden başlatacaktır. Özel ayarlarınız kaybolacaktır. Devam edilsin mi?",
+        "confirm": "Sıfırla ve Yeniden Başlat"
       },
       "mainCategories": {
         "generalSettings": {
